<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.spark</groupId>
  <artifactId>spark_bd_hw2</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>spark_bd_hw2</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_2.12</artifactId>
      <version>3.5.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/sun.nio.cs=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/sun.security.action=ALL-UNNAMED</argument>
            <argument>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argument>
            <argument>--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED</argument>
            <argument>-classpath</argument>
            <classpath/>
            <argument>com.spark.App</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>